--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -13,7 +13,7 @@ jobs:
 
   test-api-robot:
     needs: build-release
-    runs-on: ubuntu-latest
+    runs-on: sh-ubuntu-latest
     steps:
       - name: Checkout project directory
         uses: actions/checkout@v3
