--- a/.github/actions/install/action.yml
+++ b/.github/actions/install/action.yml
@@ -13,7 +13,7 @@ runs:
       run: |
         sudo apt update
         sudo apt install -y libgl1-mesa-dev xorg-dev gcc-mingw-w64-x86-64 p7zip
-        sudo apt install libx11-dev
+        sudo apt install -y libx11-dev
 
     - uses: actions/setup-go@v3
       with:
